--- a/index.html
+++ b/index.html
@@ -1,43 +1,181 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="script.js"></script>
-        <link rel="stylesheet" href="style.css">
-        <title>Simple Interest Calculator</title>
-    </head>
-    <body>
-        <div class="maindiv">
-            <h1>Simple Interest Calculator</h1>
+  <head>
+    <title>Dawn Nagel - Portfolio</title>
+    <link rel="stylesheet" href="./style.css"/>
+    <script src="./script.js"></script>
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <nav>
+      <div id="home">
+        <div class="profile_name">
+          Dawn Nagel
+          <div class="contact_info">
+            <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+          dawnnagel@xyz.com
+        </div>
+        <div style="clear:both;"></div>
+        <div class="contact_info">
+          <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+          +1234567890
 
-            Amount <input type="number"  id="principal">  <br/>
+        </div>
+        </div>
+        <div class="topdiv">
+          <a class="topmenu" href="#about-me">About Me</a>
+          <a class="topmenu" href="#skills">Skills</a>
+          <a class="topmenu" href="#projects">Projects</a>
+          <a class="topmenu" href="#recommendations">Recommendations</a>
+<!-- Add the links for Skills, Projects and Recommendation here -->
 
-            Rate <input type="range" id="rate" min="1" max="20" value="10.25" step="0.25" onchange="updateRate()"> 
-            <span id="rate_val">
-                10.25
-            </span>% <br/>
+        </div>
+      </div>    
+    </nav>
 
-            No. of Years 
-            <input type="number" id="years" list="all_years">
-            <datalist id="all_years">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-            </datalist>
-            <br />
-            Interest : <span id="result"></span><br/>
+    <!-- About Me -->
+    <section id="about-me" class="container">
+      <div>
+        <img src="https://cdn.pixabay.com/photo/2024/08/30/08/24/ai-generated-9008727_1280.jpg" class="profile_image"/>
+      </div>
 
-            <button onclick="compute()">Compute Interest</button>
+      <div>
+          <h1>
+            Hi, I'm Dawn Nagel! <img src="html_finalprojimages/waving-hand.png" width="60px"/>
+          </h1>
+          <p>
+            I am a software engineer with 6 years past programming experience. 
+            I am familiar with AI tools, LLMs and using APIs. I am currently 
+            completing the IBM AI Developer Professional Certificate Program. 
+            I want to be a UI/UX or front end developer.
+          </p>
+      </div>
+    </section>
+              
+    <!-- Skills -->
+    <section id="skills">
+      <h2>Skills</h2>
+      <div style="clear:both;"></div>
+
+      <div class="all_skills">
+        <div class="skill">
+          <img src="html_finalprojimages/html5.png"/>
+          <h6>HTML</h6>
+          <p>1 year experience</p>
+        </div>  
+
+        <div class="skill">
+            <img src="html_finalprojimages/CSS3.png"/>
+            <h6>CSS</h6>
+            <p>1 year experience</p>
+          </div>  
+  
+        <div class="skill">
+          <img src="html_finalprojimages/js.jpeg"/>
+          <h6>JavaScript</h6>
+          <p>1 year experience</p>
+        </div>  
+
+        <div class="skill">
+          <img src="https://s3.dualstack.us-east-2.amazonaws.com/pythondotorg-assets/media/community/logos/python-logo-only.png"/>
+          <h6>Python</h6>
+          <p>1 year experience</p>
         </div>
 
-        <footer>
-            &#169; This Calculator belongs to Dawn Nagel
-        </footer>
-    </body>
+        <div class="skill">
+          <img src="https://w7.pngwing.com/pngs/898/601/png-transparent-airtable-logo-sticker-tech-companies.png"/>
+          <h6>Air Table</h6>
+          <p>1 year experience</p>
+        </div>  
+  
+
+        <!-- Add more skills here -->
+
+
+      </div>
+    </section>
+          
+    <!-- Projects -->
+    <section class="projects" id="projects">
+      <h2>
+        Projects
+      </h2>
+      <div style="clear:both;"></div>
+
+        <div id="projects-container" class="projects-container">
+          <div class="project-card">
+            <h3>Monthly Invoices</h3>
+            <ul>
+              <li>Developed a monthly invoice for RH Donnelly untilizing 5 different inputs and running 22 different cycles per month</li>
+            </ul>
+          </div>
+          <hr>
+          <div class="project-card">
+            <h3>AI Mastery through Mindvalley</h3>
+            <ul>
+              <li>Participated in an 8 month course which introduced AI tools such as Airtable, Glide and Make</li>
+            </ul>
+          </div>
+          <hr>
+    </div>
+    </section>
+    <div style="clear:both;"></div>
+
+    <!-- Recommendations -->
+    <section id="recommendations">
+      <h2>Recommendations</h2>
+      <div style="clear:both;"></div>
+      <div class="all_recommendations" id="all_recommendations">
+        <div class="recommendation">
+          <span>&#8220;</span>
+          Dawn is a very quick learner and has the ability to effortlessly apply what she learns. 
+          She is an excellent team player but is also happy working alone.
+          She has a curious mind and asks the right question. 
+          She takes initiative within a team and has potentials to lead the team.
+          <span>&#8221;</span>
+        </div>
+        <div class="recommendation">
+          <span>&#8220;</span>
+          Dawn is amazing to work with. She loves to stay busy so if her work is completed, 
+          she will volunteer to help others.
+          <span>&#8221;</span>
+        </div>
+        <div class="recommendation">
+          <span>&#8220;</span>
+          Dawn is kind, friendly and a super hard worker.
+          She will be an asset to any organization!
+          <span>&#8221;</span>
+        </div>
+      </div>
+    </section>
+
+    <!-- Recommendation Form -->
+    <section id="contact">
+      <div class="flex_center">
+        <fieldset>
+          <legend class="introduction">Leave a Recommendation</legend>          
+          <input type="text" placeholder="Name (Optional)"> <br/>
+          <textarea id="new_recommendation" cols="500" rows="10" placeholder="Message"></textarea>
+          <div class="flex_center">
+            <button id="recommend_btn" onclick="addRecommendation()">Submit</button>
+          </div>
+        </fieldset>
+      </div>
+    </section>
+
+    <div class="iconbutton">
+      <a href="#home">
+        <!--Add the code here for the logo to appear and the icon to be actionable-->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" width="63px">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+      </a>
+    </div>
+
+    <div class="popup" id="popup" class="flex_center">
+      <img src="html_finalprojimages/checkmark--outline.svg"/>
+      <h3>Thank you for leaving a recommendation!<!-- Add appropriate text here--></h3>
+      <button onclick="showPopup(false)">Ok</button>
+    </div>
+  </body>
 </html>
